src/sys.rs

pub type retro_camera_start_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_camera_stop_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_camera_lifetime_status_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_camera_frame_raw_framebuffer_t = ::std::option::Option<
    unsafe extern "C" fn(
        buffer: *const u32,
        width: ::std::os::raw::c_uint,
        height: ::std::os::raw::c_uint,
        pitch: size_t,
    ),
>;
pub type retro_camera_frame_opengl_texture_t = ::std::option::Option<
    unsafe extern "C" fn(
        texture_id: ::std::os::raw::c_uint,
        texture_target: ::std::os::raw::c_uint,
        affine: *const f32,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_camera_callback {
    pub caps: u64,
    pub width: ::std::os::raw::c_uint,
    pub height: ::std::os::raw::c_uint,
    pub start: retro_camera_start_t,
    pub stop: retro_camera_stop_t,
    pub frame_raw_framebuffer: retro_camera_frame_raw_framebuffer_t,
    pub frame_opengl_texture: retro_camera_frame_opengl_texture_t,
    pub initialized: retro_camera_lifetime_status_t,
    pub deinitialized: retro_camera_lifetime_status_t,
}
pub type retro_location_set_interval_t = ::std::option::Option<
    unsafe extern "C" fn(
        interval_ms: ::std::os::raw::c_uint,
        interval_distance: ::std::os::raw::c_uint,
    ),
>;
pub type retro_location_start_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_location_stop_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_location_get_position_t = ::std::option::Option<
    unsafe extern "C" fn(
        lat: *mut f64,
        lon: *mut f64,
        horiz_accuracy: *mut f64,
        vert_accuracy: *mut f64,
    ) -> bool,
>;
pub type retro_location_lifetime_status_t = ::std::option::Option<unsafe extern "C" fn()>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_location_callback {
    pub start: retro_location_start_t,
    pub stop: retro_location_stop_t,
    pub get_position: retro_location_get_position_t,
    pub set_interval: retro_location_set_interval_t,
    pub initialized: retro_location_lifetime_status_t,
    pub deinitialized: retro_location_lifetime_status_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_rumble_effect {
    RETRO_RUMBLE_STRONG = 0,
    RETRO_RUMBLE_WEAK = 1,
    RETRO_RUMBLE_DUMMY = 2147483647,
}
pub type retro_set_rumble_state_t = ::std::option::Option<
    unsafe extern "C" fn(
        port: ::std::os::raw::c_uint,
        effect: retro_rumble_effect,
        strength: u16,
    ) -> bool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_rumble_interface {
    pub set_rumble_state: retro_set_rumble_state_t,
}
pub type retro_audio_callback_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_audio_set_state_callback_t =
    ::std::option::Option<unsafe extern "C" fn(enabled: bool)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_audio_callback {
    pub callback: retro_audio_callback_t,
    pub set_state: retro_audio_set_state_callback_t,
}
pub type retro_usec_t = i64;
pub type retro_frame_time_callback_t =
    ::std::option::Option<unsafe extern "C" fn(usec: retro_usec_t)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_frame_time_callback {
    pub callback: retro_frame_time_callback_t,
    pub reference: retro_usec_t,
}
pub type retro_audio_buffer_status_callback_t = ::std::option::Option<
    unsafe extern "C" fn(active: bool, occupancy: ::std::os::raw::c_uint, underrun_likely: bool),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_audio_buffer_status_callback {
    pub callback: retro_audio_buffer_status_callback_t,
}
pub type retro_hw_context_reset_t = ::std::option::Option<unsafe extern "C" fn()>;
pub type retro_hw_get_current_framebuffer_t =
    ::std::option::Option<unsafe extern "C" fn() -> usize>;
pub type retro_hw_get_proc_address_t = ::std::option::Option<
    unsafe extern "C" fn(sym: *const ::std::os::raw::c_char) -> retro_proc_address_t,
>;
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_hw_context_type {
    RETRO_HW_CONTEXT_NONE = 0,
    RETRO_HW_CONTEXT_OPENGL = 1,
    RETRO_HW_CONTEXT_OPENGLES2 = 2,
    RETRO_HW_CONTEXT_OPENGL_CORE = 3,
    RETRO_HW_CONTEXT_OPENGLES3 = 4,
    RETRO_HW_CONTEXT_OPENGLES_VERSION = 5,
    RETRO_HW_CONTEXT_VULKAN = 6,
    RETRO_HW_CONTEXT_DIRECT3D = 7,
    RETRO_HW_CONTEXT_DUMMY = 2147483647,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_hw_render_callback {
    pub context_type: retro_hw_context_type,
    pub context_reset: retro_hw_context_reset_t,
    pub get_current_framebuffer: retro_hw_get_current_framebuffer_t,
    pub get_proc_address: retro_hw_get_proc_address_t,
    pub depth: bool,
    pub stencil: bool,
    pub bottom_left_origin: bool,
    pub version_major: ::std::os::raw::c_uint,
    pub version_minor: ::std::os::raw::c_uint,
    pub cache_context: bool,
    pub context_destroy: retro_hw_context_reset_t,
    pub debug_context: bool,
}
pub type retro_keyboard_event_t = ::std::option::Option<
    unsafe extern "C" fn(
        down: bool,
        keycode: ::std::os::raw::c_uint,
        character: u32,
        key_modifiers: u16,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_keyboard_callback {
    pub callback: retro_keyboard_event_t,
}
pub type retro_set_eject_state_t =
    ::std::option::Option<unsafe extern "C" fn(ejected: bool) -> bool>;
pub type retro_get_eject_state_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_get_image_index_t =
    ::std::option::Option<unsafe extern "C" fn() -> ::std::os::raw::c_uint>;
pub type retro_set_image_index_t =
    ::std::option::Option<unsafe extern "C" fn(index: ::std::os::raw::c_uint) -> bool>;
pub type retro_get_num_images_t =
    ::std::option::Option<unsafe extern "C" fn() -> ::std::os::raw::c_uint>;
pub type retro_replace_image_index_t = ::std::option::Option<
    unsafe extern "C" fn(index: ::std::os::raw::c_uint, info: *const retro_game_info) -> bool,
>;
pub type retro_add_image_index_t = ::std::option::Option<unsafe extern "C" fn() -> bool>;
pub type retro_set_initial_image_t = ::std::option::Option<
    unsafe extern "C" fn(
        index: ::std::os::raw::c_uint,
        path: *const ::std::os::raw::c_char,
    ) -> bool,
>;
pub type retro_get_image_path_t = ::std::option::Option<
    unsafe extern "C" fn(
        index: ::std::os::raw::c_uint,
        path: *mut ::std::os::raw::c_char,
        len: size_t,
    ) -> bool,
>;
pub type retro_get_image_label_t = ::std::option::Option<
    unsafe extern "C" fn(
        index: ::std::os::raw::c_uint,
        label: *mut ::std::os::raw::c_char,
        len: size_t,
    ) -> bool,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_disk_control_callback {
    pub set_eject_state: retro_set_eject_state_t,
    pub get_eject_state: retro_get_eject_state_t,
    pub get_image_index: retro_get_image_index_t,
    pub set_image_index: retro_set_image_index_t,
    pub get_num_images: retro_get_num_images_t,
    pub replace_image_index: retro_replace_image_index_t,
    pub add_image_index: retro_add_image_index_t,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_disk_control_ext_callback {
    pub set_eject_state: retro_set_eject_state_t,
    pub get_eject_state: retro_get_eject_state_t,
    pub get_image_index: retro_get_image_index_t,
    pub set_image_index: retro_set_image_index_t,
    pub get_num_images: retro_get_num_images_t,
    pub replace_image_index: retro_replace_image_index_t,
    pub add_image_index: retro_add_image_index_t,
    pub set_initial_image: retro_set_initial_image_t,
    pub get_image_path: retro_get_image_path_t,
    pub get_image_label: retro_get_image_label_t,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_pixel_format {
    _0RGB1555 = 0,
    _XRGB8888 = 1,
    _RGB565 = 2,
    _UNKNOWN = 2147483647,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_message {
    pub msg: *const ::std::os::raw::c_char,
    pub frames: ::std::os::raw::c_uint,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_message_target {
    RETRO_MESSAGE_TARGET_ALL = 0,
    RETRO_MESSAGE_TARGET_OSD = 1,
    RETRO_MESSAGE_TARGET_LOG = 2,
}
#[repr(u32)]
#[non_exhaustive]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum retro_message_type {
    RETRO_MESSAGE_TYPE_NOTIFICATION = 0,
    RETRO_MESSAGE_TYPE_NOTIFICATION_ALT = 1,
    RETRO_MESSAGE_TYPE_STATUS = 2,
    RETRO_MESSAGE_TYPE_PROGRESS = 3,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_message_ext {
    pub msg: *const ::std::os::raw::c_char,
    pub duration: ::std::os::raw::c_uint,
    pub priority: ::std::os::raw::c_uint,
    pub level: retro_log_level,
    pub target: retro_message_target,
    pub type_: retro_message_type,
    pub progress: i8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_input_descriptor {
    pub port: ::std::os::raw::c_uint,
    pub device: ::std::os::raw::c_uint,
    pub index: ::std::os::raw::c_uint,
    pub id: ::std::os::raw::c_uint,
    pub description: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_system_info {
    pub library_name: *const ::std::os::raw::c_char,
    pub library_version: *const ::std::os::raw::c_char,
    pub valid_extensions: *const ::std::os::raw::c_char,
    pub need_fullpath: bool,
    pub block_extract: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_system_content_info_override {
    pub extensions: *const ::std::os::raw::c_char,
    pub need_fullpath: bool,
    pub persistent_data: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_game_info_ext {
    pub full_path: *const ::std::os::raw::c_char,
    pub archive_path: *const ::std::os::raw::c_char,
    pub archive_file: *const ::std::os::raw::c_char,
    pub dir: *const ::std::os::raw::c_char,
    pub name: *const ::std::os::raw::c_char,
    pub ext: *const ::std::os::raw::c_char,
    pub meta: *const ::std::os::raw::c_char,
    pub data: *const ::std::os::raw::c_void,
    pub size: size_t,
    pub file_in_archive: bool,
    pub persistent_data: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_game_geometry {
    pub base_width: ::std::os::raw::c_uint,
    pub base_height: ::std::os::raw::c_uint,
    pub max_width: ::std::os::raw::c_uint,
    pub max_height: ::std::os::raw::c_uint,
    pub aspect_ratio: f32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_system_timing {
    pub fps: f64,
    pub sample_rate: f64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_system_av_info {
    pub geometry: retro_game_geometry,
    pub timing: retro_system_timing,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_variable {
    pub key: *const ::std::os::raw::c_char,
    pub value: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_option_display {
    pub key: *const ::std::os::raw::c_char,
    pub visible: bool,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_option_value {
    pub value: *const ::std::os::raw::c_char,
    pub label: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_option_definition {
    pub key: *const ::std::os::raw::c_char,
    pub desc: *const ::std::os::raw::c_char,
    pub info: *const ::std::os::raw::c_char,
    pub values: [retro_core_option_value; 128usize],
    pub default_value: *const ::std::os::raw::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct retro_core_options_intl {
    pub us: *mut retro_core_option_definition,
    pub local: *mut retro_core_option_definition,
}
